fix lightbox.css path

--- a/template/template.html
+++ b/template/template.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title><%= json.meta.title.headline %></title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="js/lightbox.css" type="text/css">
+    <link rel="stylesheet" href="css/lightbox.css" type="text/css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/lightbox.js"></script>
     <script type="text/javascript" src="js/unveil.js"></script>
