Fixed footer line

--- a/template/template.html
+++ b/template/template.html
@@ -55,7 +55,7 @@
 
     <footer>
 
-        <p>'<%= json.meta.title.headline %>', eine Galerie von <a href="<%= json.meta.title.author.url %>"><%= json.meta.title.author.name %></a>. Erstellt mit <a href="http://blubb.io">Urlaubsbilder, LOL.io</a>.</p>
+        <p>'<%= json.meta.title.headline %>', eine Galerie von <a href="<%= json.meta.title.author.url %>"><%= json.meta.title.author.name %></a>. Erstellt mit <a href="https://github.com/pwaldhauer/daiquiri">daiquiri</a>.</p>
 
     </footer>
 
